tests/fixtures/valid/inline_dag_call_cross_file/src/lib/lib.gcl
pub dim Velocity = Length / Time;

pub dag scale {
    param factor: Dimensionless;

    param v: Velocity;

    pub node result: Velocity = @v * @factor;
}
