tests/fixtures/invalid/match_arm_type_mismatch.gcl
// Error: match arms return different types
pub dim Velocity = Length / Time;

pub type Impulsive {
    delta_v: Velocity,
}
pub type Coasting {}
pub type ManeuverKind = Impulsive | Coasting;

param m: ManeuverKind = Coasting { };

node result: Velocity = match @m {
    Impulsive { delta_v } => delta_v,
    Coasting => 0.0,
};
